WK 6: Swagger Updates (Branch)
